<resources>
    <string name="app_name">EasyCheck-Admin</string>
    <string name="Welcome_To">Welcome TO</string>
    <string name="easycheck">EasyCheck</string>
    <string name="effortless_attendance_n_more_time__education">Effortless Attendance\nMore Time\nMore Education</string>
    <string name="etEmailMobileRoll">Enter Your Email</string>
    <string name="Enter_password">Enter Password</string>
    <string name="don_t_have_account_nregister_here">Don\'t Have Account\nRegister Here ?</string>
    <string name="use_another_method">User Another Method</string>
    <string name="Enter_Mobile_No">Enter Mobile No</string>
    <string name="Enter_Otp">Enter Otp</string>
    <string name="login_with_id_password">Login WIth Id Password</string>
    <string name="Enter_Your_Name">Enter Your Name</string>
    <string name="register_email_hint">Enter Your Mail</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="search_students">Search Student</string>

    <string-array name="select_course">
        <item name="">Select Course</item>
        <item name="mba">MBA</item>
        <item name="mca">MCA</item>
    </string-array>

    <string-array name="batch_array">

        <item>2022-2024</item>
        <item>2023-2025</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>